= Jason release notes
:toc: right

ifdef::env-github[:outfilesuffix: .adoc]

== version 2.4 (2019-MM-DD)

- New internal action to change verbosity:
    * `.verbose(2)`: start showing debug messages
    * `.verbose(1)`: goes back to normal message / logging level

- Improved support for meta-programming. See demos/meta-programming.

== version 2.3 (2018-10-01)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.3/[here])


- New internal actions to support Directory Facilitator services:
    * `.df_register(S)`: register the agent in the DF as a provider of service `S`
    * `.df_deregister(S)`: removes the agent in the DF as a provider of service `S`
    * `.df_search(S, L)`: unifies in `L` a list of all agents providing the service `S`
    * `.df_subscribe(S)`: subscribes the agent as interested in providers of service `S`
+
When JADE is used, this services are mapped to the JADE DF service.

- Java 1.8 a is now used
- new syntax: operator `--` to delete some belief with new focus for the event.
- new internal action: `.drop_future_intention` (see javadoc api for more information)
- new internal action: `.printf`, inspired in Java Format
  (https://docs.oracle.com/javase/tutorial/java/data/numberformat.html)
+
----
I=4;
D=34.123;
.printf("i=%08.0f and d=%10.2f", I, D);
----
+
produces:
----
i=00000004 and d=     34.12
----

== version 2.2 (2017-09-21)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.2/[here])

- new syntax for atoms: as in Prolog, any sequence of characters enclosed by `'` can be used. Examples:
** `'$%12'` (atom)
** `b('@1')` (term using new syntax, in this case, the term is an atom and not a string)
** `'$%12'(10)` (literal with functor using new syntax)

- new syntax: optional `elif` in conditional statement. Example:
+
----
if   (e(1)) { .print(a); }
elif (e(2)) { .print(b); }
elif (e(3)) { .print(c); }
else        { .print(d); }
----
